<resources>
    <string name="app_name">QuizApp</string>
    <string name="MyqQuizApp">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="entryName">Please enter your name</string>
    <string name="name">e.g abc</string>
    <string name="start">Start</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="submit">SUBMIT</string>
    <string name="result">Result</string>
    <string name="trophy">Trophy</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="finish">Finish</string>
</resources>