<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newbg2"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    tools:context=".FinalScreem">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="30sp"
        />

    <ImageView
        android:id="@+id/imageId"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:contentDescription="@string/trophy"
        android:src="@drawable/ic_trophy"
        />


    <TextView
        android:id="@+id/tv_congo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hey_congratulations"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv_name_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:background="#001d3d"
        tools:text="Username"
        />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        tools:text="Your Score is 9 out 0f 10"
        />

    <Button
        android:id="@+id/bt03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        />


</LinearLayout>